--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=sample_user
 spring.datasource.password=sample_password!
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
+
+logging.level.org.jooq.tools.LoggerListener=DEBUG
